--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voiceos",
-  "version": "0.8.1",
+  "version": "0.8.12",
   "description": "VoiceOS Web SDK",
   "author": "WakoAI",
   "repository": {
@@ -27,12 +27,12 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "whatwg-fetch": "^3.0.0",
     "es6-promise": "^4.2.4",
-    "url-parse": "^1.4.3"
+    "url-parse": "^1.4.3",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.0",
-    "@types/url-parse": "1.4.4"
+    "@types/url-parse": "1.4.4",
+    "typescript": "^4.0"
   }
 }
